[gd_scene load_steps=4 format=3 uid="uid://c3xqj8kv5m2nh"]

[ext_resource type="Script" uid="uid://bnm8aq68ynko3" path="res://scenes/game_world.gd" id="1"]
[ext_resource type="Script" uid="uid://ciwhp1yx1msg2" path="res://ui/selection_box.gd" id="2"]
[ext_resource type="Script" uid="uid://bk4j4vokkwpfx" path="res://ui/monster_info_panel.gd" id="3"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)

[node name="Monsters" type="Node2D" parent="."]

[node name="Environment" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SelectionBox" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="MonsterInfoPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3")

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/MonsterInfoPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CanvasLayer/MonsterInfoPanel/VBox"]
layout_mode = 2
text = "Monster Name"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/MonsterInfoPanel/VBox"]
layout_mode = 2
value = 100.0

[node name="StaminaBar" type="ProgressBar" parent="CanvasLayer/MonsterInfoPanel/VBox"]
layout_mode = 2
value = 100.0

[node name="StressBar" type="ProgressBar" parent="CanvasLayer/MonsterInfoPanel/VBox"]
layout_mode = 2

[node name="AbilitiesContainer" type="HBoxContainer" parent="CanvasLayer/MonsterInfoPanel/VBox"]
layout_mode = 2
alignment = 1
